src/assets/base.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

p {
  margin: 0;
}

ul {
  list-style-type: none;
}
.p-tooltip ul {
  list-style-type: disc;
}
.p-tooltip {
  max-width: 27rem;
}

body {
  min-height: 100vh;
  color: var(--text-color);
  background: var(--surface-ground);
  transition: color 0.5s, background-color 0.5s;
  line-height: 1.6;
  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  font-size: 16px;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  padding: 2rem;
}

.link {
  cursor: pointer;
  color: var(--primary-color);
}
.link:hover,
.link:focus {
  text-decoration: underline;
}

.hoverlink {
  text-decoration: none;
}
.hoverlink:hover,
.hoverlink:focus {
  text-decoration: underline;
  color: var(--primary-color) !important;
}

.p-panel {
  max-width: 94vw;
}

